<resources>
    <string name="app_name">ProjetoFinal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_principal_label">Menu Principal</string>

    <string name="lista_medicos_label">Médicos</string>
    <string name="lista_pacientes_label">Pacientes</string>
    <string name="lista_especialidades_label">Especialidades</string>

    <string name="inserir_medico_label">Novo Médico</string>
    <string name="eliminar_medico_label">Eliminar Médico</string>
    <string name="alterar_medico_label">Alterar Médico</string>

    <string name="inserir_paciente_label">Novo Paciente</string>
    <string name="eliminar_paciente_label">Eliminar Paciente</string>
    <string name="alterar_paciente_label">Alterar Paciente</string>

    <string name="editar_especialidade_label">Nova Especialidade</string>
    <string name="eliminar_especialidade_label">Eliminar Especialidade</string>
    <string name="alterar_especialidade_label">Alterar Especialidade</string>

    <string name="lista_pulseiras_label">Pulseiras</string>
    <string name="editar_pulseira_label">Nova Pulseira</string>
    <string name="eliminar_pulseira_label">Eliminar Pulseira</string>
    <string name="alterar_pulseira_label">Alterar Pulseira</string>

    <string name="lista_consultas_label">Consultas</string>
    <string name="editar_consulta_label">Consulta</string>


    <string name="Medicos">Médicos</string>
    <string name="Pacientes">Pacientes</string>
    <string name="Consultas">Consultas</string>
    <string name="Pulseiras">Pulseiras</string>
    <string name="Especialidades">Especialidades</string>


    <string name="previous">Voltar</string>

    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="eliminar">Eliminar</string>

    <string name="nome">Nome</string>
    <string name="telemovel">Telemovel</string>
    <string name="email">Email</string>
    <string name="genero">Genero</string>
    <string name="cartaocidadao">Cartao Cidadao</string>
    <string name="especialidade">Especialidade</string>

    <string name="nome_paciente">Nome</string>
    <string name="data_nacimento_paciente">Data Nascimento</string>
    <string name="genero_paciente">Genero</string>
    <string name="morada">Morada</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="telemovel_paciente">telemóvel</string>
    <string name="email_paciente">Email</string>
    <string name="cartao_cidadao_paciente">Cartão Cidadão</string>
    <string name="contribuinte">Contribuinte</string>

    <string name="Especialidade">Especialidade</string>
    <string name="pulseira">Pulseira</string>

    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <string name="nome_obrigatorio">Preencha o nome</string>
    <string name="telemovel_obrigatorio">Preencha o telemovel</string>
    <string name="email_obrigatorio">Preencha o email</string>
    <string name="genero_obrigatorio">Preencha o genero</string>
    <string name="cartao_cidadao_obrigatorio">Preencha o cartao de cidadão</string>
    <string name="especialidade_obrigatoria">Escolha a especialidade</string>

    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="preco">Preço</string>
    <string name="medico_consulta">Médico</string>
    <string name="paciente_consulta">Paciente</string>
    <string name="pulseira_consulta">Pulseira</string>

    <string name="nomeP_obrigatorio">Preencha o nome</string>
    <string name="data_nascimento_obrigatoria">Preencha a data de nascimento </string>
    <string name="generoP_obrigatorio">Preencha o genero</string>
    <string name="morada_obrigatoria">Preencha a morada</string>
    <string name="codigo_postal_obrigatorio">Preencha o código postal</string>
    <string name="telemovelP_obrigatorio">Preencha o telemóvel</string>
    <string name="emailP_obrigatorio">Preencha o email</string>
    <string name="cartao_cidadaoP_obrigatorio">Preencha o cartão de cidadão</string>
    <string name="contribuinte_obrigatorio">Preencha o contribuinte</string>

    <string name="paciente_inserido_sucesso">Paciente inserido com sucesso.</string>
    <string name="erro_inserir_paciente">Erro ao inserir paciente.</string>

    <string name="medico_inserido_sucesso">Médico inserido com sucesso.</string>
    <string name="medico_alterado_sucesso">Médico alterado com sucesso.</string>
    <string name="erro_guardar_medico">Erro ao guardar médico.</string>

    <string name="medico_eliminado_sucesso">Médico eliminado com sucesso.</string>
    <string name="erro_eliminar_medico">Erro ao eliminar médico.</string>

    <string name="titulo_dialogo_apagar_medico">Apagar Médico</string>
    <string name="confirma_apagar_medico">Tem a certeza que quer apagar o Médico?</string>

    <string name="especialidade_obrigatoria_especialidade">Preencha a Especialidade</string>

    <string name="especialidade_inserido_sucesso">Especialidade inserida com sucesso.</string>
    <string name="erro_inserir_especialidade">Erro ao inserir especialidade.</string>

    <string name="especialidade_eliminada_sucesso">Especialidade eliminada com sucesso.</string>
    <string name="erro_eliminar_especialidade">Erro ao eliminar Especialidade.</string>

    <string name="titulo_dialogo_apagar_especialidade">Apagar Especialidade</string>
    <string name="confirma_apagar_especialidade">Tem a certeza que quer apagar a especialidade?</string>

    <string name="especialidade_alterada_sucesso">Especialidade alterada com sucesso.</string>
    <string name="erro_guardar_especialidade">Erro ao guardar especialidade.</string>

    <string name="paciente_eliminado_sucesso">Paciente eliminado com sucesso.</string>
    <string name="erro_eliminar_paciente">Erro ao eliminar paciente.</string>

    <string name="titulo_dialogo_apagar_paciente">Apagar paciente</string>
    <string name="confirma_apagar_paciente">Tem a certeza que quer apagar o paciente?</string>

    <string name="paciente_alterado_sucesso">Paciente alterado com sucesso.</string>
    <string name="erro_guardar_paciente">Erro ao guardar paciente.</string>

    <string name="pulseira_obrigatoria">Preencha a pulseira</string>

    <string name="pulseira_inserida_sucesso">Pulseira inserida com sucesso.</string>
    <string name="erro_inserir_pulseira">Erro ao inserir pulseira.</string>

    <string name="pulseira_eliminada_sucesso">Pulseira eliminada com sucesso.</string>
    <string name="erro_eliminar_pulseira">Erro ao eliminar pulseira.</string>

    <string name="titulo_dialogo_apagar_pulseira">Apagar pulseira</string>
    <string name="confirma_apagar_pulseira">Tem a certeza que quer apagar a Pulseira?</string>

    <string name="pulseira_alterada_sucesso">Pulseira alterada com sucesso.</string>
    <string name="erro_guardar_pulseira">Erro ao guardar pulseira.</string>


</resources>