<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuprincipalFragment">

    <fragment
        android:id="@+id/MenuprincipalFragment"
        android:name="com.example.projetofinal.MenuPrincipalFragment"
        android:label="@string/menu_principal_label"
        tools:layout="@layout/fragment_menu_principal">

        <action
            android:id="@+id/action_MenuPrincipalFragment_to_ListaMedicosFragment"
            app:destination="@id/ListaMedicosFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_ListaPacientesFragment"
            app:destination="@id/ListaPacientesFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListaPacientesFragment"
        android:name="com.example.projetofinal.ListaPacientesFragment"
        android:label="@string/lista_pacientes_label"
        tools:layout="@layout/fragment_lista_pacientes">

        <action
            android:id="@+id/action_ListaLivrosFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuprincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListaMedicosFragment"
        android:name="com.example.projetofinal.ListaMedicosFragment"
        android:label="@string/lista_medicos_label"
        tools:layout="@layout/fragment_medicos_label">
        <action
            android:id="@+id/action_ListaMedicosFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuprincipalFragment" />
        <action
            android:id="@+id/action_ListaMedicosFragment_to_EditarMedicosFragment"
            app:destination="@id/EditarMedicosFragment" />
        <action
            android:id="@+id/action_ListaMedicoFragment_to_EliminarMedicoFragment"
            app:destination="@id/EliminarMedicoFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditarMedicosFragment"
        android:name="com.example.projetofinal.EditarMedicosFragment"
        tools:layout="@layout/fragment_editar_medico">
        <action
            android:id="@+id/action_EditarMedicosFragment_to_ListaMedicosFragment"
            app:destination="@id/ListaMedicosFragment" />
        <argument
            android:name="medico"
            app:argType="com.example.projetofinal.Medico"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/EliminarMedicoFragment"
        android:name="com.example.projetofinal.EliminarMedicoFragment"
        android:label="@string/eliminar_medico_label"
        tools:layout="@layout/fragment_eliminar_medico">
        <action
            android:id="@+id/action_eliminarMedicoFragment_to_ListaMedicoFragment"
            app:destination="@id/ListaMedicosFragment" />
        <argument
            android:name="medico"
            app:argType="com.example.projetofinal.Medico" />
    </fragment>
</navigation>